--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,28 +15,28 @@ jobs:
             args: "--target aarch64-apple-darwin"
             arch: "silicon"
             type: "aarch64"
-            assetPattern: "[name]_[arch][ext]"
+            assetPattern: "[name]_[ver]_[arch][ext]"
           - platform: "macos-latest"
             args: "--target x86_64-apple-darwin"
             arch: "silicon"
             type: "x86_64"
-            assetPattern: "[name]_[arch][ext]"
+            assetPattern: "[name]_[ver]_[arch][ext]"
           - platform: "ubuntu-22.04"
             args: ""
-            assetPattern: "[name]_[arch][ext]"
+            assetPattern: "[name]_[ver]_[arch][ext]"
           - platform: "ubuntu-22.04-arm"
             args: ""
-            assetPattern: "[name]_[arch][ext]"
+            assetPattern: "[name]_[ver]_[arch][ext]"
           - platform: "windows-11-arm"
             args: "--target x86_64-pc-windows-msvc"
             arch: "arm64"
             type: "x86_64"
-            assetPattern: "[name]_[arch][ext]"
+            assetPattern: "[name]_[ver]_[arch][ext]"
           - platform: "windows-11-arm"
             args: "--target aarch64-pc-windows-msvc"
             arch: "arm64"
             type: "aarch64"
-            assetPattern: "[name]_[arch][ext]"
+            assetPattern: "[name]_[ver]_[arch][ext]"
 
     runs-on: ${{ matrix.platform }}
     steps:
