--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,12 +27,12 @@ jobs:
           - platform: "ubuntu-22.04-arm"
             args: ""
             assetPattern: "[name]_[ver]_[arch][ext]"
-          - platform: "windows-11-arm"
+          - platform: "windows-latest"
             args: "--target x86_64-pc-windows-msvc"
             arch: "arm64"
             type: "x86_64"
             assetPattern: "[name]_[ver]_[arch][ext]"
-          - platform: "windows-11-arm"
+          - platform: "windows-latest"
             args: "--target aarch64-pc-windows-msvc"
             arch: "arm64"
             type: "aarch64"
