feat: Implement mount state change event listener and update package checksums in AUR and headless PKGBUILDs.

--- a/AUR/PKGBUILD
+++ b/AUR/PKGBUILD
@@ -14,8 +14,8 @@ options=('!strip' '!debug')
 # install=${pkgname}.install
 source_x86_64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_amd64.deb")
 source_aarch64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_arm64.deb")
-sha256sums_x86_64=('SKIP')
-sha256sums_aarch64=('SKIP')
+sha256sums_x86_64=('57fb35d4ad012641cd1bc1097a7731af8e58bb0dcc83f89bc32bad57b859d1c4')
+sha256sums_aarch64=('9b19da93d2a48dd9f66e5d2c5531dc1f8c29f877a0587cc7a0d6a3e62ad0d445')
 package() {
   tar -xvf data.tar.gz -C "${pkgdir}"
 }
