--- a/.dockerignore
+++ b/.dockerignore
@@ -66,7 +66,8 @@ yarn.lock
 pnpm-lock.yaml
 
 # Rust debug builds (we only need release)
-src-tauri/target/debug/
+# Rust build artifacts (all of them)
+src-tauri/target/
 
 # Tauri specific
 src-tauri/gen/
