feat: Update build scripts for portable/flatpak/headless, refine CSS with opacity, and adjust rclone stats module loading.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "tauri": "tauri",
-    "headless-dev": "npm run tauri dev -- --config src-tauri/tauri.conf.headless.json --features web-server,updater",
-    "headless": "npm run tauri build -- --config src-tauri/tauri.conf.headless.json --features web-server,updater",
+    "dev:portable": "npm run tauri dev -- --features portable",
+    "dev:flatpak": "npm run tauri dev -- --features flatpak",
+    "dev:headless": "npm run tauri dev -- --config src-tauri/tauri.conf.headless.json --features web-server,updater",
+    "build:portable": "npm run tauri build -- --features portable --no-bundle",
+    "build:flatpak": "npm run tauri build -- --bundles deb --config '{\"bundle\":{\"createUpdaterArtifacts\":false}}' --features flatpak",
+    "build:headless": "npm run tauri build -- --config src-tauri/tauri.conf.headless.json --features web-server,updater",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "format": "prettier --write \"src/**/*.{ts,html,scss,json}\"",
