--- a/headless/PKGBUILD
+++ b/headless/PKGBUILD
@@ -13,8 +13,8 @@ optdepends=('rclone')
 options=('!strip' '!debug')
 source_x86_64=("${url}/releases/download/headless-v${releasetag}/${appname}_${pkgver}_amd64.deb")
 source_aarch64=("${url}/releases/download/headless-v${releasetag}/${appname}_${pkgver}_arm64.deb")
-sha256sums_x86_64=('SKIP')
-sha256sums_aarch64=('SKIP')
+sha256sums_x86_64=('9962c54756b41c0c421b74776b96c45a9916ab3ce38c919fa85e4d90fe155c1a')
+sha256sums_aarch64=('01b35ee9f07b27abfdf83562ff3e82d819d7227d7e169a29461a5f959dcfb48e')
 
 prepare() {
   cd "${srcdir}"
