--- a/AUR/PKGBUILD
+++ b/AUR/PKGBUILD
@@ -9,7 +9,7 @@ arch=('x86_64' 'aarch64')
 url="https://github.com/Zarestia-Dev/rclone-manager"
 license=('GPL-3.0-or-later')
 depends=('cairo' 'desktop-file-utils' 'gdk-pixbuf2' 'glib2' 'gtk3' 'hicolor-icon-theme' 'libsoup' 'pango' 'webkit2gtk-4.1')
-optdepends=('rclone')
+optdepends=('rclone: for cloud storage operations', 'fuse3: for mounting remote filesystems')
 options=('!strip' '!debug')
 # install=${pkgname}.install
 source_x86_64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_amd64.deb")
