--- a/package.json
+++ b/package.json
@@ -48,13 +48,28 @@
     "@angular/material": "^21.1.1",
     "@angular/platform-browser": "^21.1.1",
     "@angular/platform-browser-dynamic": "^21.1.1",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-go": "^6.0.1",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/lang-rust": "^6.0.2",
+    "@codemirror/lang-sass": "^6.0.2",
+    "@codemirror/lang-sql": "^6.10.0",
+    "@codemirror/lang-yaml": "^6.1.2",
+    "@codemirror/language": "^6.12.1",
+    "@codemirror/legacy-modes": "^6.5.2",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.39.14",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
     "@tauri-apps/api": "~2.9.1",
     "@tauri-apps/plugin-os": "^2.3.2",
-    "@types/highlight.js": "^9.12.4",
+    "codemirror": "^6.0.2",
     "cronstrue": "^3.9.0",
-    "highlight.js": "^11.11.1",
     "marked": "^17.0.0",
     "ngx-mat-timepicker": "^21.0.0",
     "rxjs": "~7.8.2",
