--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rclone-manager",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -66,7 +66,7 @@
     "@codemirror/view": "^6.39.14",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
-    "@tauri-apps/api": "~2.9.1",
+    "@tauri-apps/api": "~2.10.2",
     "@tauri-apps/plugin-os": "^2.3.2",
     "codemirror": "^6.0.2",
     "cronstrue": "^3.12.0",
@@ -99,5 +99,8 @@
     "prettier": "^3.7.4",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.14.0"
+  },
+  "overrides": {
+    "ajv": "^8.17.1"
   }
 }
