--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,7 @@
             "outputPath": "dist/rclone-manager",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
+            "polyfills": [],
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/assets", "src/favicon.ico"],
             "styles": ["src/custom-theme.scss"]
