--- a/package.json
+++ b/package.json
@@ -73,8 +73,7 @@
     "marked": "^17.0.0",
     "ngx-mat-timepicker": "^21.0.0",
     "rxjs": "~7.8.2",
-    "tslib": "^2.8.1",
-    "zone.js": "~0.16.0"
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@angular/build": "^21.1.1",
